<?xml version="1.0"?>
<package>
  <name>turtlebot_autoop</name>
  <version>0.0.0</version>
  <description>The turtlebot_autoop package</description>
  
  <maintainer email="svqm5@mst.edu">sudharsan</maintainer>
  
  <license>BSD</license>
  <author email="svqm5@mst.edu">Sudharsan Vaidhun</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>